# apkit

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CHANGELOG_DIFF.md  CNAME  CONTRIBUTING.md  FEDERATION.md  README.md  Taskfile.yaml  index.html  mkdocs.yml  poc.py  pyproject.toml  release-please-config.json  shared-cliff.toml  sitemap.xml  test-server.py
.gemini/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check.yml  deploy-rc.yml  deploy.yml  docs.yml  publish.yml  release.yml
.zed/: settings.json
about/: index.html
docs/: index.md  tutorial.md
docs/guides/: client.md  nodeinfo.md  outbox.md
docs/resources/: security.md  useful_links.md
examples/: README.md  delete.py  follow.py  like.py  minimal_server.py  send_message.py
guides/: index.html
guides/advanced/: index.html
guides/advanced/framework_integration/: index.html
guides/client/: index.html
guides/configuration/: index.html
guides/kv_store/: index.html
guides/models/: index.html
guides/nodeinfo/: index.html
guides/server/: index.html
resources/: index.html
resources/contributing/: index.html
resources/security/: index.html
resources/useful_links/: index.html
search/: search_index.json
src/apkit/: __init__.py  _version.py  apkit.py  cache.py  config.py  exceptions.py  request.py  types.py  webfinger.py
src/apkit/abc/: server.py  types.py
src/apkit/actor/: fetch.py
src/apkit/client/: __init__.py  _common.py  actor.py  client.py  models.py  types.py
src/apkit/client/asyncio/: actor.py  client.py
src/apkit/client/base/: __init__.py  context.py
src/apkit/client/methods/: get.py  post.py
src/apkit/client/sync/: actor.py  client.py  types.py
src/apkit/helper/: host_meta.py  inbox.py  version.py
src/apkit/kv/: inmemory.py
src/apkit/models/: __init__.py
src/apkit/nodeinfo/: __init__.py  builder.py
src/apkit/req/: request.py
src/apkit/server/: app.py  responses.py  subrouter.py  types.py
src/apkit/server/routes/: inbox.py  outbox.py
src/apkit/store/kv/: inmemory.py  redis.py
src/apkit/x/: notturno.py  starlette.py
tests/: test_cache.py  test_host_meta.py
tests/client/: test_common.py  test_models.py  test_request.py
tests/helper/: test_inbox.py  test_inbox_verifier.py
tutorial/: index.html
