[project]
name = "apkit"
version = "0.1.0"
description = "Powerful Toolkit for ActivityPub Implementations."
authors = [
    {name = "AmaseCocoa", email = "cocoa@amase.cc"},
]
dependencies = ["httpcore[asyncio,http2,socks]>=1.0.7", "apsig>=0.3.0", "pydantic>=2.10.6", "pyfill>=0.1.0" , "apmodel @ file:///${PROJECT_ROOT}/apmodel-0.2.3-py3-none-any.whl"]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
license = {text = "MIT"}

[project.optional-dependencies]
startelle = [
    "starlette>=0.45.3",
]
notturno = [
    "notturno>=0.1.4",
]
starlette = [
    "uvicorn>=0.34.0",
]
redis = [
    "redis>=5.2.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
