[project]
name = "apkit"
dynamic = ["version"]
description = "Powerful Toolkit for ActivityPub Implementations."
readme = "README.md"
authors = [
    { name = "AmaseCocoa", email = "cocoa@amase.cc" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "apmodel>=0.5.1",
    "apsig>=0.6.0",
    "cryptography>=46.0.6",
    "http-sf>=1.1.1",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "typing-extensions>=4.15.0",
]

[project.urls]
Repository = "https://github.com/fedi-libs/apkit"
Issues = "https://github.com/fedi-libs/apkit/issues"
Changelog = "https://github.com/fedi-libs/apkit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
redis = [
    "redis>=5.0.4",
]
server = [
    "fastapi>=0.116.1",
    "starlette>=1.0.0"
]
speed = [
    "apmodel[speed]>=0.5.1"
]

[tool.deptry]
exclude = [
  ".venv",
  "examples",
  "tests"
]
known_first_party = ["apkit"]

[tool.uv]
default-groups = "all"

[tool.uv.sources]
apmodel = { git = "https://github.com/fedi-libs/apmodel.git", branch = "develop" }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/apkit/_version.py"

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "coverage>=7.10.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ty>=0.0.18",
    "respx>=0.22.0",
    "ruff>=0.14.10",
    "prek>=0.3.3",
    "pre-commit>=4.5.1",
    "lxml-stubs>=0.5.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material==9.6.20",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "src/apmodel/_core/_initial/_rebuild.py"
]
extend-exclude = ["tests", "src/apkit/_version.py", "src/apkit/nodeinfo/__init__.py"]


line-length = 88
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "N"]
ignore = ["E501", "W292"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.src]
exclude = [
    ".venv/**",
]
